working on upload. not working yet

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,19 +8,22 @@
 
     <Spinner
         android:id="@+id/gestureDropDown"
-        android:layout_width="395dp"
-        android:layout_height="wrap_content"
+        android:layout_width="200dp"
+        android:layout_height="50dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.499" />
 
     <TextView
         android:id="@+id/chooseGesture"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Select a Gesture"
+        android:textSize="20pt"
+        android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionMode.Title"
         app:layout_constraintBottom_toTopOf="@+id/gestureDropDown"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
