--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,12 +4,25 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#19A48C"
     tools:context=".FirstActivity">
+
+    <EditText
+        android:id="@+id/asu_id"
+        android:layout_width="313dp"
+        android:layout_height="94dp"
+        android:layout_marginStart="48dp"
+        android:hint="Enter ASU ID"
+        android:textSize="18pt"
+        app:layout_constraintBottom_toTopOf="@+id/chooseGesture"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.722" />
 
     <Spinner
         android:id="@+id/gestureDropDown"
-        android:layout_width="200dp"
-        android:layout_height="50dp"
+        android:layout_width="261dp"
+        android:layout_height="82dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
@@ -22,12 +35,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Select a Gesture"
-        android:textSize="20pt"
         android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionMode.Title"
+        android:textSize="20pt"
         app:layout_constraintBottom_toTopOf="@+id/gestureDropDown"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.924" />
 
 </android.support.constraint.ConstraintLayout>
