--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -4,13 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#19A48C"
     tools:context=".SecondActivity">
 
     <Button
         android:id="@+id/practice"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Practice"
+        android:text="Record"
         android:textSize="16pt"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
