--- a/app/src/main/res/layout/activity_third.xml
+++ b/app/src/main/res/layout/activity_third.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent">
+    android:layout_height="fill_parent"
+    android:background="#19A48C">
 
     <FrameLayout
         android:id="@+id/camera_frame"
